# mcp

./: .gitignore  Dockerfile  README.md  a.txt  aws-api-mcp-server.md  aws-knowledge-mcp-server.md  build-docker-with-args.sh  coder.py  confluence.md  google-docs.md  pyproject.toml  requirements.txt  run-docker.sh  setup.py  test.py  test_aws_storage.py  test_conv_history.py  test_ebs.py  test_efs.py  user_defined_mcp.json
application/: __init__.py  agent.py  agentcore.json  agentcore_memory.py  app.py  chat.py  cost_analysis.py  info.py  knowledge_base.py  langgraph_agent.py  mcp.env  mcp_agentcore_coder.py  mcp_basic.py  mcp_browser.py  mcp_config.py  mcp_cost.py  mcp_knowledge_base.py  mcp_log.py  mcp_long_term_memory.py  mcp_rag.py  mcp_retrieve.py  mcp_server_agentcore_coder.py  mcp_server_aws_cli.py  mcp_server_aws_log.py  mcp_server_aws_storage.py  mcp_server_basic.py  mcp_server_browser.py  mcp_server_coder.py  mcp_server_kb.py  mcp_server_lambda_knowledge_base.py  mcp_server_long_term_memory.py  mcp_server_repl_coder.py  mcp_server_retrieve.py  mcp_server_short_term_memory.py  mcp_server_tavily.py  mcp_server_use_aws.py  mcp_server_wikipedia.py  mcp_storage.py  mobile.py  search.py  (+12 more)
application/aws_cost/: implementation.py  reflection_agent.py
application/interactive_tools/: browser_viewer.py
application/interactive_tools/static/js/: bedrock-agentcore-browser-viewer.js
application/knowledgebase/: client.py
backup/: agent.py
cdk-mcp/: package-lock.json
cdk-mcp/lib/: cdk-mcp-stack.ts
mcp-rag/: rag-agent.py
mcp_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
streamlit-app/: Dockerfile  app.py  deployment.yaml  requirements.txt
